# gpth-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.ja.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/gpth-cli/: Cargo.toml
crates/gpth-cli/src/: main.rs
crates/gpth-core/: Cargo.toml
crates/gpth-core/src/: album_json.rs  checkpoint.rs  dedup.rs  folder_classify.rs  lib.rs  media.rs  writer.rs  zip_scan.rs
crates/gpth-core/src/date/: exif.rs  json.rs
src/: album_json.rs  dedup.rs  extras.rs  folder_classify.rs  main.rs  media.rs  writer.rs  zip_scan.rs
src-frontend/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/date/: guess.rs  json.rs  mod.rs
wix/: main.wxs
