[package]
name = "gpth-rs"
version = "0.1.0"
edition = "2021"
description = "Google Photos Takeout Helper - process zip files without extraction"

[dependencies]
clap = { version = "4", features = ["derive"] }
zip = "2"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kamadak-exif = "0.5"
indicatif = "0.17"
mime_guess = "2"
regex = "1"
anyhow = "1"
unicode-normalization = "0.1"
filetime = "0.2"
rayon = "1.10"
