[package]
name = "gpth"
version = "0.1.0"
edition = "2021"

[lib]
name = "gpth_app"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
gpth-core = { path = "../crates/gpth-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
