[package]
name = "gpth-core"
version = "0.4.1"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
zip = "2"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kamadak-exif = "0.5"
indicatif = "0.17"
mime_guess = "2"
regex = "1"
anyhow = "1"
unicode-normalization = "0.1"
filetime = "0.2"
rayon = "1.10"
pathdiff = "0.2"
encoding_rs = "0.8"

[dev-dependencies]
tempfile = "3"
